# memora-doc

./: .gitignore  AGENTS.md  README.md  build.gradle.kts  gradlew  settings.gradle.kts  start-backend.sh
.claude/commands/: opsx
.cursor/skills/: agent-skills-coder  openspec-workflow
ai-context/share-skills/: README.md  projections.json
doc/: README.md  Skill使用及配置指南.md  开发规范.md  资源库设计文档.md  项目设计文档.md
doc/architecture/: industry-product-references-and-trade-offs.md  product-requirements-and-scope.md  refactor-design-and-plan.md  technical-architecture-and-api-design.md
doc/development/: code-naming-standard.md  development-standard.md  online-document-main-flow-smoke-checklist.md  refactor-task-breakdown-and-milestones.md  release-standard.md
doc/业界Skills/: update_skills.py  业界优秀Skills.md  更新技能列表说明.md
doc/功能模块/: web端设计文档.md  功能模块整体设计文档.md  客户端设计文档.md  服务端设计文档.md
doc/开发管理/: 代码命名规范.md  在线文档系统主流程冒烟验收清单.md  迭代任务计划.md  重构任务拆解与里程碑.md
doc/架构设计/: Memora与Outline_Docmost_AppFlowy对照与取舍.md  在线文档系统产品需求与范围.md  在线文档系统技术架构与接口设计.md  在线文档系统轻量化收敛评估.md  在线文档系统重构设计与计划.md  开源在线文档方案借鉴分析.md
memora-client/: README.md  package.json
memora-client/src/: App.jsx
memora-client/src-tauri/: Cargo.toml
memora-server/: README.md  build.gradle.kts  settings.gradle.kts
memora-server/memora-server-common/: build.gradle.kts
memora-web-app/: .eslintrc.cjs  API_CONFIG.md  README.md  index.html  package-lock.json  package.json  vite.config.js
memora-web-app/src/: App.jsx  (+1 more)
scripts/: backend-build.sh  backend-test.sh  check-share-skills.sh  release-build.sh  update-skills.sh
(+197 files in other folders)
