[package]
name = "memora-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tauri = "^1.5.0"
serde_json = "^1.0"
serde = { version = "^1.0", features = ["derive"] }

[lib]
crate-type = ["staticlib", "cdylib"]

[build-dependencies]
tauri-build = "^1.5.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --features dev`
# this feature is used in the src-tauri/src/main.rs file
dev = ["tauri/dev"]
